Authentication v2, added roles, added authorization